# aoc

./: .gitignore  Pipfile  README.md  game.py  run.sh
2018/day01/: main.c
2018/day02/: Makefile  input.in  main.c
2018/day03/: Makefile  main.c
2019/: Pipfile
2019/common/: interpreter.py
2019/scripts/: day03.py  day07.py  day08.py  day12.py
2020/: CMakeLists.txt
2020/include/: adventofcode.h  day1.h  pch.h
2020/src/: main.cpp
2022/: day1.py  day2.py  day3.py  day4.py  day5.py
2023/day1/: day1.py
2023/day2/: day2.py
2023/day3/: day3.py
2023/day4/: day4.py
common/: interpreter.py
day01/: day01.py
day02/: day02.py
day04/: day04.py
day05/: day05.py
daytest/: test.py
intcode/: intcode.py
scripts/: day05.py  day07.py  day09.py  day10.py  day11.py  day12.py  dayo06.py
